--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="shortcut icon" href="static/favicon.ico" type="image/x-icon" />
     <title>TODO-Pro-By-Vue</title>
+  </head>
 
-</head>
-
-<body>
-    <div id="app"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
